--- a/stylesheets/clean.less
+++ b/stylesheets/clean.less
@@ -1,17 +1,96 @@
+@import "ui-variables";
+
 .clean {
+
+  atom-pane,atom-panel, atom-pane > div,atom-panel > div{
+    padding:0px !important;
+    margin:0px !important;
+    border:none;
+  }
+
   .editor:not(.mini) {
-    padding: 0 10%;
+    padding: 20px 0 0 20%;
+  }
+
+  .left{
+    .tree-view-resizer{
+      width: auto !important;
+      float: left;
+    }
+    .tree-view{
+      padding-right:20px;
+    }
+    .panel-left{
+      position:absolute;
+      left: -100%;
+      width: auto !important;
+    }
+    border-right:10px solid @pane-item-border-color;
+    &:hover > .panel-left{
+      left:0px;
+    }
+  }
+
+  .right{
+    .panel-right{
+      position:absolute;
+      right:-100%;
+    }
+    border-left:10px solid @pane-item-border-color;
+    &:hover > .panel-right{
+      right:0px;
+    }
   }
 
   .gutter,
   .line-numbers,
-  .status-bar,
-  .tab-bar,
-  .left,
-  .right{
+  .status-bar{
     display: none;
   }
-  atom-text-editor::shadow .gutter{
-    display:none;
+  .tab-bar{
+    li{
+      z-index: 20;
+      display: none;
+      &.active{
+        border-bottom:solid 4px @base-background-color;
+      }
+    }
+    //height: 10px;
+    width:100%;
+    z-index:10;
+    transform: scaleY(0.2);
+    transform-origin: 0 0;
+
+    &:hover{
+      //height:auto;
+      transform:none;
+      li{
+        display:inline-block;
+      }
+
+    }
+  }
+  atom-text-editor::shadow{
+    .gutter{
+      display:none;
+    }
+    .vertical-scrollbar{
+      display:none;
+    }
+    atom-text-editor-minimap{
+      opacity:0;
+      &:hover{
+        opacity:1;
+      }
+    }
+  }
+  .item-views{
+    position:static;
+  }
+}
+
+ .clean-show-left{
+  .left{
+    display:block !important;
   }
 }
