active tab on top

--- a/stylesheets/clean.less
+++ b/stylesheets/clean.less
@@ -48,6 +48,9 @@
     display: none;
   }
   .tab-bar{
+    .tab.active{
+      z-index:40;
+    }
     li{
       z-index: 20;
       display: none;
