--- a/stylesheets/clean.less
+++ b/stylesheets/clean.less
@@ -86,6 +86,7 @@
       display:none;
     }
     atom-text-editor-minimap{
+      transition:opacity 150ms;
       opacity:0;
       &:hover{
         opacity:1;
